@@ -1,5 +1,10 @@
 2009-07-06  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler_socket.cc (fhandler_socket::recv_internal): Convert wsabuf
+	and wsacnt to references.  Fix handling of WSAEMSGSIZE.
+
+2009-07-06  Corinna Vinschen  <corinna@vinschen.de>
+
 	* cygtls.h (struct _local_storage): Add thread storage pointers for
 	memory used by socket select functions.  Combine them into a single
 	struct select.
